--- a/assets/css/opavia.css
+++ b/assets/css/opavia.css
@@ -66,6 +66,10 @@ hr {
 	border-top-color: #DDD;
 }
 
+.bold {
+	font-weight: bold;
+}
+
 
 /*------------------------------------------------------------------
 [2. Navbar / .navbar]
